<resources>
    <string name="app_name">CareBlock</string>
    <string name="user_button">User Button</string>
    <string name="registrar_button">Registrar button</string>
    <string name="title_activity_user_records">UserRecords</string>

    <string name="hello_world">Hello world!</string>
    <string name="registrar">REGISTRAR</string>
    <string name="user">USER</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="medical_summary">Medical Summary</string>
    <string name="password">Password</string>
    <string name="doctor">DOCTOR</string>
</resources>
