<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="101dp"
        android:text="@string/user"
        android:textSize="26sp"
        android:textColor="#fff"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/registrar_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_effect" />

    <Button

        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="50dp"
        android:text="@string/registrar"
        android:textSize="26sp"
        android:textColor="#fff"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:background="@drawable/button_effect" />


</android.support.constraint.ConstraintLayout>